# toponym-api

./: .gitignore  .pre-commit-config.yaml  .travis-ci.yml  .travis.yml  Dockerfile  README.md  pyproject.toml  requirements.txt  template.yml
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: topodic.py
scripts/: example.ipynb
tests/: conftest.py  test_languages_endpoint.py  test_ping.py  test_recipes_endpoint.py  test_topodict_endpoint.py  test_topogen_endpoint.py
toponym-api/: requirements.txt
toponym-api/app/: main.py
toponym-api/app/api/api_v1/: api.py
toponym-api/app/api/api_v1/endpoints/: languages.py  topodic.py  topogen.py
toponym-api/app/core/: config.py
toponym-api/app/core/models/: input.py  output.py
toponym_api/: main.py  requirements.txt
toponym_api/api/api_v1/: api.py
toponym_api/api/api_v1/endpoints/: languages.py  recipes.py  topodic.py  topogen.py
toponym_api/app/: main.py
toponym_api/app/api/api_v1/: api.py
toponym_api/app/api/api_v1/endpoints/: languages.py  topogen.py
toponym_api/core/: config.py
toponym_api/core/models/: output.py
