[tool.poetry]
name = "toponym_api"
version = "0.1.0"
description = "API to interfact toponym"

license = "MIT"

authors = [
    "Benjamin Ramser <ahoi@iwpnd.pw>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/iwpnd/toponym-api"
homepage = "https://github.com/iwpnd/toponym-api"

keywords = ['fastapi', 'toponym', 'slavic grammar']

[tool.poetry.dependencies]
python = "^3.6"  # Compatible python versions must be declared here
toml = "^0.9"
fastapi = "^0.42.0"

# Git dependencies
toponym = { git = "https://github.com/iwpnd/toponym.git", branch = "master" }
mangum = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

[tool.poetry.scripts]
# my-script = 'my_package:main'
